--- a/config/database.yml
+++ b/config/database.yml
@@ -1,13 +1,18 @@
 development:
   adapter: mysql2
   database: myApp
+  encoding: utf8  
+  reconnect: false
   username: root 
   password: root
   pool: 5
   timeout: 5000
   
 test:
+  
   adapter: mysql2
+  encoding: utf8  
+  reconnect: false
   database: myApp
   username: root
   password: root
@@ -16,6 +21,8 @@ test:
   
 production:
   adapter: mysql2
+  encoding: utf8  
+  reconnect: false
   database: myApp
   username: root
   password: root
